--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://orebishopping.reactbd.com/" />
+    <meta property="og:url" content="https://ilarashopping.reactbd.com/" />
     <meta
       property="og:title"
       content="ILARA Shopping | Experience the Better"
@@ -35,12 +35,12 @@
     />
     <meta
       property="og:image"
-      content="https://orebishopping.reactbd.com/assets/og-image.jpg"
+      content="https://ilarashopping.reactbd.com/assets/og-image.jpg"
     />
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://orebishopping.reactbd.com/" />
+    <meta name="twitter:url" content="https://ilarashopping.reactbd.com/" />
     <meta
       name="twitter:title"
       content="ILARA Shopping | Experience the Better"
@@ -51,7 +51,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://orebishopping.reactbd.com/assets/og-image.jpg"
+      content="https://ilarashopping.reactbd.com/assets/og-image.jpg"
     />
 
     <!-- Theme Color for Mobile Browsers -->
@@ -61,7 +61,7 @@
     <meta name="google-adsense-account" content="ca-pub-6542623777003381" />
 
     <!-- Canonical URL to prevent duplicate content -->
-    <link rel="canonical" href="https://orebishopping.reactbd.com/" />
+    <link rel="canonical" href="https://ilarashopping.reactbd.com/" />
 
     <!-- Manifest for PWA -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -72,10 +72,10 @@
         "@context": "https://schema.org",
         "@type": "WebSite",
         "name": "ILARA Shopping",
-        "url": "https://orebishopping.reactbd.com/",
+        "url": "https://ilarashopping.reactbd.com/",
         "potentialAction": {
           "@type": "SearchAction",
-          "target": "https://orebishopping.reactbd.com/search?q={search_term_string}",
+          "target": "https://ilarashopping.reactbd.com/search?q={search_term_string}",
           "query-input": "required name=search_term_string"
         }
       }
