--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,15 @@
     <!-- Google AdSense -->
     <meta name="google-adsense-account" content="ca-pub-6542623777003381" />
 
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WZ1YLJ93GG"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-WZ1YLJ93GG');
+    </script>
+
     <!-- Canonical URL to prevent duplicate content -->
     <link rel="canonical" href="https://ilarashopping.reactbd.com/" />
 
